* Tue Nov 22 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Bump major version

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.1.2-0
- Minor cleanup

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-4
- migration to simplib and simpcat (lib/ only)

* Mon Apr 06 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-3
- Updated to ensure that a banner is not printed since this breaks many
  clients.

* Thu Feb 19 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Migrated to the new 'simp' environment.

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-1
- Changed puppet-server requirement to puppet

* Fri Apr 04 2014 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-0
- Updated module for puppet3/hiera
- Complies with lint and added rspec tests

* Wed Oct 02 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.0.0-6
- Use 'versioncmp' for all version comparisons.

* Tue Dec 11 2012 Maintenance
4.0.0-5
- Created a Cucumber test to ensure that vnc and its dependencies install correctly
  from the vnc module.
- Created a Cucumber test to ensure that the ports 5901, 5902, and 5903 are in state
  LISTEN and owned by xinetd after vnc::server has been installed and configured.

* Wed Nov 14 2012 Maintenance
4.0.0-4
- Removed tigervnc-server-module from the included packages list since it is
  not included in RHEL/CentOS 6.3 by default and is not needed for Xvnc
  performance.

* Wed Apr 11 2012 Maintenance
4.0.0-3
- Moved mit-tests to /usr/share/simp...
- Updated pp files to better meet Puppet's recommended style guide.

* Fri Mar 02 2012 Maintenance
4.0.0-2
- Improved test stubs.

* Mon Dec 26 2011 Maintenance
4.0.0-1
- Updated the spec file to not require a separate file list.

* Wed Nov 02 2011 Maintenance
4.0.0-0
- Updated to handle RHEL6

* Mon Jun 06 2011 Maintenance - 2.0.0-1
- Added -audit 4 and a variable screensaver timeout to the VNC spawned X sessions.

* Tue Jan 11 2011 Maintenance - 2.0.0-0