@@ -13,7 +13,7 @@ describe 'vnc::server' do
 
         it { should contain_class('simplib') }
         it { should contain_class('xinetd') }
-        it { should contain_class('xwindows') }
+        it { should contain_class('gdm') }
 
         it do
           should create_vnc__server__create('vnc_standard').with({
@@ -38,7 +38,7 @@ describe 'vnc::server' do
         end
 
         it { should contain_package('tigervnc-server') }
-        it { should create_xwindows__gdm__set('enable_xdmcp') }
+        it { should create_gdm__set('enable_xdmcp') }
 
       end
     end
